# bare-minimum-for-auth-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: .env.example  alembic.ini  main.py
src/action/: create_superuser.py
src/api/: __init__.py  admin.py  auth.py  user.py
src/api/views/: __init__.py  reset_bridge.py  verification_bridge.py
src/core/: CONST.py  config.py
src/core/database/: __init__.py  base.py  context_manager.py  db_helper.py
src/core/database/models/: __init__.py  refresh_token.py  user.py
src/core/database/schemas/: auth.py  user.py
src/core/dependency/: admin.py  services.py  transport.py  user.py
src/core/jinja/: jinja_templates.py
src/core/mailing/: __init__.py  base_send_email.py  send_email_after_verify.py  send_email_to_forgot_password.py  send_email_to_reset_password.py  send_email_to_verify.py
src/core/oauth/github/: __init__.py  url.py
src/core/services/: admin.py  oauth.py  user.py
src/core/templates/bridge/: base.html  reset_proccess.html  verification_proccess.html
src/exceptions/: auth.py
src/migrations/: env.py
src/migrations/versions/: 2025_10_20_1318-dc8a89ef41e3_initial_create_user_table.py  2025_10_20_1349-bc40a4972766_add_new_fields_for_user_table.py  2025_10_23_1405-44b04af91f2c_create_refresh_token_table.py  2025_10_23_1443-f29a5048ac10_update_field_in_refresh_token_table.py  2025_10_24_1357-d7a1d2f9c679_add_created_at_field_to_user_table.py  2025_10_25_1344-1bfb1d55251d_add_new_field_to_user.py
src/utilities/: access_token.py  jwt_token.py  security.py
(+5 files in other folders)
