[project]
name = "audioApp"
version = "0.1.0"
authors = [
    {name  = "Vanny", email = "msvankaspr@gmail.com"}
]
description = "..."
readme = "README.md"
dynamic = ["dependencies", "requires-python"]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true
path= ".venv"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.119.0"
uvicorn = "^0.38.0"
black = "^25.9.0"
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
